--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,10 +2,10 @@ homeassistant:
   # Name of the location where Home Assistant is running
   name: Domov
   # Location required to calculate the time the sun rises and sets
-  latitude: 50.404869
-  longitude: 16.162917
+  latitude: !secret home_latitude
+  longitude: !secret home_longitude
   # Impacts weather/sunrise data (altitude above sea level in meters)
-  elevation: 384
+  elevation: !secret home_elevation
   # metric for Metric, imperial for Imperial
   unit_system: metric
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
@@ -75,7 +75,7 @@ media_player:
     turn_on_action:
       service: wake_on_lan.send_magic_packet
       data:
-        mac: "3C-CD-93-DF-CF-5F"
+        mac: !secret tv_mac
 
 notify:
   - platform: webostv
