--- a/configuration.yaml
+++ b/configuration.yaml
@@ -96,3 +96,5 @@ device_tracker:
     hosts: 192.168.0.0/24
     exclude:
       - 192.168.0.1
+  - platform: edimax_extender
+    host: '192.168.0.10'
