--- a/configuration.yaml
+++ b/configuration.yaml
@@ -16,9 +16,6 @@ homeassistant:
 # Enables the frontend
 frontend:
 
-# Enables configuration UI
-config:
-
 # Checks for available updates
 # Note: This component will send some information about your system to
 # the developers to assist with development of Home Assistant.
@@ -56,12 +53,11 @@ http:
 
 # Sensors
 sensor:
-  # Weather prediction
-  - platform: yr
   # SSL Cert
   - platform: command_line
-    name: SSL cert
-    unit_of_measurement: days
+    name: ssl_cert
+    friendly_name: SSL Certifikát
+    unit_of_measurement: dní
     scan_interval: 10800
     command: "ssl-cert-check -b -c /etc/letsencrypt/live/home.josefkuchar.com/cert.pem | awk '{ print $NF }'"
 
@@ -75,6 +71,12 @@ automation: !include automations.yaml
 script: !include scripts.yaml
 
 wake_on_lan:
+
+weather:
+  - platform: darksky
+    name: Počasí
+    mode: daily
+    api_key: !secret weather_api
 
 media_player:
   - platform: webostv
@@ -102,3 +104,5 @@ device_tracker:
   - platform: edimax_extender
     interval_seconds: 60
     host: '192.168.0.10'
+
+config:
