--- a/automations.yaml
+++ b/automations.yaml
@@ -1,1 +1,19 @@
-[]
+- id: '1545152190216'
+  alias: Budík
+  trigger:
+  - at: '5:54'
+    platform: time
+  condition:
+  - condition: time
+    weekday:
+      - mon
+      - tue
+      - wed
+      - thu
+      - fri
+  action:
+  - alias: ''
+    data:
+      brightness: 255
+      entity_id: light.bedroom_light
+    service: light.turn_on
